package io.iss.factory;

public enum StateType {
    MENU,
    INTRO,
    PLAY
}
